# mysql-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
mysql_mcp/: __main__.py  config.py  server.py
mysql_mcp/db/: pool.py  schema.py
mysql_mcp/llm/: client.py  prompt.py  validator.py
mysql_mcp/models/: response.py
mysql_mcp/security/: validator.py
mysql_mcp/tools/: describe_schema.py  execute_sql.py  health_check.py  list_databases.py  query.py
specs/: 0001-mysql-mcp-prd.md  0002-mysql-mcp-design.md  0003-mysql-mcp-impl-plan.md  institutions.md
src/: __init__.py  __main__.py  config.py  server.py
src/db/: pool.py  schema.py
src/llm/: client.py  prompt.py  validator.py
src/models/: schema.py
src/security/: validator.py
src/tools/: describe_schema.py  execute_sql.py  health_check.py  list_databases.py  query.py
tests/: test_ai_validator.py  test_config.py  test_execute_sql.py  test_llm_client.py  test_pool.py  test_prompt_builder.py  test_query.py  test_response_models.py  test_schema_manager.py  test_schema_models.py  test_sql_validator.py  test_tools_simple.py
tests/integration/: test_e2e.py  test_health.py  test_health_check.py
